# abysalto-task

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml
app/: dependencies.py  main.py
app/api/v1/: api.py
app/core/: agent.py  config.py  knowledge.py  prompts.py
app/db/: __init__.py
app/models/: __init__.py  api_key.py  ask.py  document.py  knowledge_chunk.py  tenant.py
app/rest/: ask.py  upload.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py
scripts/: entrypoint.sh  pg-init.sql
tests/: conftest.py
tests/integration/: conftest.py  test_ask.py  test_upload.py
tests/unit/: conftest.py  test_verify_api_key.py
