[project]
name = "app"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "sqlmodel>=0.0.25",
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    "pydantic-settings>=2.9.1",
    "psycopg2-binary>=2.9.9",
    "agno[pgvector,aws]>=0.1.0",
    "boto3>=1.34.0",
    "pymupdf>=1.25.0",
    "fastembed>=0.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.0.0",
    "testcontainers[postgres]>=4.10.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require database/services)",
]
